code/tui/snapshots/fullscreen/interaction_flow/recovered_home_draft.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&restored, 80, 20)"
---
  .                                                                [Dashboard]














  ────────────────────────────────────────────────────────────────────────────
  > new task draft
  ─────────────────────────────────────────────────────────── Automatic model
  ⏸ Manual
  Enter send  ·  / commands
